--- a/src/azure-cli/azure/cli/command_modules/network/tests/latest/recordings/test_network_public_ip_prefix_edge_zone.yaml
+++ b/src/azure-cli/azure/cli/command_modules/network/tests/latest/recordings/test_network_public_ip_prefix_edge_zone.yaml
@@ -13,12 +13,12 @@ interactions:
       ParameterSetName:
       - -g -n --length --edge-zone
       User-Agent:
-      - AZURECLI/2.45.0 azsdk-python-azure-mgmt-resource/22.0.0 Python/3.10.9 (Windows-10-10.0.22621-SP0)
+      - AZURECLI/2.47.0 azsdk-python-azure-mgmt-resource/22.0.0 Python/3.8.1 (Windows-10-10.0.22000-SP0)
     method: GET
     uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourcegroups/test_network_public_ip_prefix_edge_zone000001?api-version=2022-09-01
   response:
     body:
-      string: '{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/test_network_public_ip_prefix_edge_zone000001","name":"test_network_public_ip_prefix_edge_zone000001","type":"Microsoft.Resources/resourceGroups","location":"eastus2euap","tags":{"product":"azurecli","cause":"automation","date":"2023-02-16T09:56:57Z"},"properties":{"provisioningState":"Succeeded"}}'
+      string: '{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/test_network_public_ip_prefix_edge_zone000001","name":"test_network_public_ip_prefix_edge_zone000001","type":"Microsoft.Resources/resourceGroups","location":"eastus2euap","tags":{"product":"azurecli","cause":"automation","date":"2023-04-10T02:40:08Z"},"properties":{"provisioningState":"Succeeded"}}'
     headers:
       cache-control:
       - no-cache
@@ -27,7 +27,7 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       date:
-      - Thu, 16 Feb 2023 09:57:01 GMT
+      - Mon, 10 Apr 2023 02:40:12 GMT
       expires:
       - '-1'
       pragma:
@@ -61,25 +61,25 @@ interactions:
       ParameterSetName:
       - -g -n --length --edge-zone
       User-Agent:
-      - AZURECLI/2.45.0 (AAZ) azsdk-python-core/1.24.0 Python/3.10.9 (Windows-10-10.0.22621-SP0)
+      - AZURECLI/2.47.0 (AAZ) azsdk-python-core/1.24.0 Python/3.8.1 (Windows-10-10.0.22000-SP0)
     method: PUT
-    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/test_network_public_ip_prefix_edge_zone000001/providers/Microsoft.Network/publicIPPrefixes/pubip1-prefix?api-version=2022-01-01
+    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/test_network_public_ip_prefix_edge_zone000001/providers/Microsoft.Network/publicIPPrefixes/pubip1-prefix?api-version=2022-09-01
   response:
     body:
-      string: "{\r\n  \"name\": \"pubip1-prefix\",\r\n  \"id\": \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/test_network_public_ip_prefix_edge_zone000001/providers/Microsoft.Network/publicIPPrefixes/pubip1-prefix\"\
-        ,\r\n  \"etag\": \"W/\\\"3c7010fd-f80b-42f9-b44e-8451d372b023\\\"\",\r\n \
-        \ \"type\": \"Microsoft.Network/publicIPPrefixes\",\r\n  \"location\": \"\
-        eastus2euap\",\r\n  \"extendedLocation\": {\r\n    \"type\": \"EdgeZone\"\
-        ,\r\n    \"name\": \"microsoftrrdclab1\"\r\n  },\r\n  \"properties\": {\r\n\
-        \    \"provisioningState\": \"Updating\",\r\n    \"resourceGuid\": \"a197c4ee-7c4a-4a47-8321-918d28533d95\"\
-        ,\r\n    \"prefixLength\": 30,\r\n    \"publicIPAddressVersion\": \"IPv4\"\
-        ,\r\n    \"ipTags\": []\r\n  },\r\n  \"sku\": {\r\n    \"name\": \"Standard\"\
-        ,\r\n    \"tier\": \"Regional\"\r\n  }\r\n}"
+      string: "{\r\n  \"name\": \"pubip1-prefix\",\r\n  \"id\": \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/test_network_public_ip_prefix_edge_zone000001/providers/Microsoft.Network/publicIPPrefixes/pubip1-prefix\",\r\n
+        \ \"etag\": \"W/\\\"52c60a3a-3d9f-4550-a165-be4fb42a8c27\\\"\",\r\n  \"type\":
+        \"Microsoft.Network/publicIPPrefixes\",\r\n  \"location\": \"eastus2euap\",\r\n
+        \ \"extendedLocation\": {\r\n    \"type\": \"EdgeZone\",\r\n    \"name\":
+        \"microsoftrrdclab1\"\r\n  },\r\n  \"properties\": {\r\n    \"provisioningState\":
+        \"Updating\",\r\n    \"resourceGuid\": \"3b5317c9-6106-404b-bce3-dc18dcea8d80\",\r\n
+        \   \"prefixLength\": 30,\r\n    \"publicIPAddressVersion\": \"IPv4\",\r\n
+        \   \"ipTags\": []\r\n  },\r\n  \"sku\": {\r\n    \"name\": \"Standard\",\r\n
+        \   \"tier\": \"Regional\"\r\n  }\r\n}"
     headers:
       azure-asyncnotification:
       - Enabled
       azure-asyncoperation:
-      - https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Network/locations/eastus2euap/operations/5ef724fb-eb59-46da-aa7f-9a19e006ae7d?api-version=2022-01-01
+      - https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Network/locations/eastus2euap/operations/ded93377-193b-416e-8929-0083f11e4de6?api-version=2022-09-01
       cache-control:
       - no-cache
       content-length:
@@ -87,7 +87,7 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       date:
-      - Thu, 16 Feb 2023 09:57:08 GMT
+      - Mon, 10 Apr 2023 02:40:20 GMT
       expires:
       - '-1'
       pragma:
@@ -100,12 +100,12 @@ interactions:
       x-content-type-options:
       - nosniff
       x-ms-arm-service-request-id:
-      - 02dddfb1-6d9d-4e44-a15b-75ef68f1c645
+      - 71ddc89c-6a85-4240-bb14-d6ac5a004715
       x-ms-ratelimit-remaining-subscription-writes:
-      - '1194'
+      - '1199'
     status:
       code: 201
-      message: ''
+      message: Created
 - request:
     body: null
     headers:
@@ -120,9 +120,9 @@ interactions:
       ParameterSetName:
       - -g -n --length --edge-zone
       User-Agent:
-      - AZURECLI/2.45.0 (AAZ) azsdk-python-core/1.24.0 Python/3.10.9 (Windows-10-10.0.22621-SP0)
+      - AZURECLI/2.47.0 (AAZ) azsdk-python-core/1.24.0 Python/3.8.1 (Windows-10-10.0.22000-SP0)
     method: GET
-    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Network/locations/eastus2euap/operations/5ef724fb-eb59-46da-aa7f-9a19e006ae7d?api-version=2022-01-01
+    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Network/locations/eastus2euap/operations/ded93377-193b-416e-8929-0083f11e4de6?api-version=2022-09-01
   response:
     body:
       string: "{\r\n  \"status\": \"InProgress\"\r\n}"
@@ -134,7 +134,7 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       date:
-      - Thu, 16 Feb 2023 09:57:12 GMT
+      - Mon, 10 Apr 2023 02:40:23 GMT
       expires:
       - '-1'
       pragma:
@@ -151,10 +151,10 @@ interactions:
       x-content-type-options:
       - nosniff
       x-ms-arm-service-request-id:
-      - d9132b26-f2a4-41bf-8026-f2dbbd245a89
+      - ed789fae-dca4-4428-ac66-70c98aa2b84b
     status:
       code: 200
-      message: ''
+      message: OK
 - request:
     body: null
     headers:
@@ -169,9 +169,9 @@ interactions:
       ParameterSetName:
       - -g -n --length --edge-zone
       User-Agent:
-      - AZURECLI/2.45.0 (AAZ) azsdk-python-core/1.24.0 Python/3.10.9 (Windows-10-10.0.22621-SP0)
+      - AZURECLI/2.47.0 (AAZ) azsdk-python-core/1.24.0 Python/3.8.1 (Windows-10-10.0.22000-SP0)
     method: GET
-    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Network/locations/eastus2euap/operations/5ef724fb-eb59-46da-aa7f-9a19e006ae7d?api-version=2022-01-01
+    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Network/locations/eastus2euap/operations/ded93377-193b-416e-8929-0083f11e4de6?api-version=2022-09-01
   response:
     body:
       string: "{\r\n  \"status\": \"InProgress\"\r\n}"
@@ -183,7 +183,7 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       date:
-      - Thu, 16 Feb 2023 09:57:23 GMT
+      - Mon, 10 Apr 2023 02:40:34 GMT
       expires:
       - '-1'
       pragma:
@@ -200,10 +200,10 @@ interactions:
       x-content-type-options:
       - nosniff
       x-ms-arm-service-request-id:
-      - 7bc30f0e-a3bb-494e-90c4-440ac19fdadc
+      - 33d090ca-a3e9-46e6-aac0-f22844a6b135
     status:
       code: 200
-      message: ''
+      message: OK
 - request:
     body: null
     headers:
@@ -218,9 +218,9 @@ interactions:
       ParameterSetName:
       - -g -n --length --edge-zone
       User-Agent:
-      - AZURECLI/2.45.0 (AAZ) azsdk-python-core/1.24.0 Python/3.10.9 (Windows-10-10.0.22621-SP0)
+      - AZURECLI/2.47.0 (AAZ) azsdk-python-core/1.24.0 Python/3.8.1 (Windows-10-10.0.22000-SP0)
     method: GET
-    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Network/locations/eastus2euap/operations/5ef724fb-eb59-46da-aa7f-9a19e006ae7d?api-version=2022-01-01
+    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Network/locations/eastus2euap/operations/ded93377-193b-416e-8929-0083f11e4de6?api-version=2022-09-01
   response:
     body:
       string: "{\r\n  \"status\": \"Succeeded\"\r\n}"
@@ -232,7 +232,7 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       date:
-      - Thu, 16 Feb 2023 09:57:44 GMT
+      - Mon, 10 Apr 2023 02:40:54 GMT
       expires:
       - '-1'
       pragma:
@@ -249,10 +249,10 @@ interactions:
       x-content-type-options:
       - nosniff
       x-ms-arm-service-request-id:
-      - a073148c-c4a4-49bb-9f3f-759547f4874e
+      - 68140ffd-526a-4055-9067-9c5c7c2988be
     status:
       code: 200
-      message: ''
+      message: OK
 - request:
     body: null
     headers:
@@ -267,21 +267,21 @@ interactions:
       ParameterSetName:
       - -g -n --length --edge-zone
       User-Agent:
-      - AZURECLI/2.45.0 (AAZ) azsdk-python-core/1.24.0 Python/3.10.9 (Windows-10-10.0.22621-SP0)
+      - AZURECLI/2.47.0 (AAZ) azsdk-python-core/1.24.0 Python/3.8.1 (Windows-10-10.0.22000-SP0)
     method: GET
-    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/test_network_public_ip_prefix_edge_zone000001/providers/Microsoft.Network/publicIPPrefixes/pubip1-prefix?api-version=2022-01-01
+    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/test_network_public_ip_prefix_edge_zone000001/providers/Microsoft.Network/publicIPPrefixes/pubip1-prefix?api-version=2022-09-01
   response:
     body:
-      string: "{\r\n  \"name\": \"pubip1-prefix\",\r\n  \"id\": \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/test_network_public_ip_prefix_edge_zone000001/providers/Microsoft.Network/publicIPPrefixes/pubip1-prefix\"\
-        ,\r\n  \"etag\": \"W/\\\"dadf0af0-a8e7-4cc8-afa8-ce19e83f981b\\\"\",\r\n \
-        \ \"type\": \"Microsoft.Network/publicIPPrefixes\",\r\n  \"location\": \"\
-        eastus2euap\",\r\n  \"extendedLocation\": {\r\n    \"type\": \"EdgeZone\"\
-        ,\r\n    \"name\": \"microsoftrrdclab1\"\r\n  },\r\n  \"properties\": {\r\n\
-        \    \"provisioningState\": \"Succeeded\",\r\n    \"resourceGuid\": \"a197c4ee-7c4a-4a47-8321-918d28533d95\"\
-        ,\r\n    \"prefixLength\": 30,\r\n    \"publicIPAddressVersion\": \"IPv4\"\
-        ,\r\n    \"ipPrefix\": \"198.180.97.52/30\",\r\n    \"ipTags\": []\r\n  },\r\
-        \n  \"sku\": {\r\n    \"name\": \"Standard\",\r\n    \"tier\": \"Regional\"\
-        \r\n  }\r\n}"
+      string: "{\r\n  \"name\": \"pubip1-prefix\",\r\n  \"id\": \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/test_network_public_ip_prefix_edge_zone000001/providers/Microsoft.Network/publicIPPrefixes/pubip1-prefix\",\r\n
+        \ \"etag\": \"W/\\\"d7c24d1f-1b07-4f4f-bea5-52d66bdb4485\\\"\",\r\n  \"type\":
+        \"Microsoft.Network/publicIPPrefixes\",\r\n  \"location\": \"eastus2euap\",\r\n
+        \ \"extendedLocation\": {\r\n    \"type\": \"EdgeZone\",\r\n    \"name\":
+        \"microsoftrrdclab1\"\r\n  },\r\n  \"properties\": {\r\n    \"provisioningState\":
+        \"Succeeded\",\r\n    \"resourceGuid\": \"3b5317c9-6106-404b-bce3-dc18dcea8d80\",\r\n
+        \   \"prefixLength\": 30,\r\n    \"publicIPAddressVersion\": \"IPv4\",\r\n
+        \   \"ipPrefix\": \"198.180.97.52/30\",\r\n    \"ipTags\": []\r\n  },\r\n
+        \ \"sku\": {\r\n    \"name\": \"Standard\",\r\n    \"tier\": \"Regional\"\r\n
+        \ }\r\n}"
     headers:
       cache-control:
       - no-cache
@@ -290,9 +290,9 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       date:
-      - Thu, 16 Feb 2023 09:57:44 GMT
+      - Mon, 10 Apr 2023 02:40:55 GMT
       etag:
-      - W/"dadf0af0-a8e7-4cc8-afa8-ce19e83f981b"
+      - W/"d7c24d1f-1b07-4f4f-bea5-52d66bdb4485"
       expires:
       - '-1'
       pragma:
@@ -309,8 +309,8 @@ interactions:
       x-content-type-options:
       - nosniff
       x-ms-arm-service-request-id:
-      - 738de92c-3f13-42df-a170-7e2bd5d27dc9
+      - 1047595f-7335-41f9-9fd1-7601bc6175ee
     status:
       code: 200
-      message: ''
+      message: OK
 version: 1
