--- a/src/azure-cli/requirements.py3.Darwin.txt
+++ b/src/azure-cli/requirements.py3.Darwin.txt
@@ -14,7 +14,9 @@ azure-data-tables==12.4.0
 azure-datalake-store==0.0.49
 azure-graphrbac==0.60.0
 azure-keyvault-administration==4.0.0b3
+azure-keyvault-certificates==4.7.0
 azure-keyvault-keys==4.8.0b2
+azure-keyvault-secrets==4.7.0
 azure-keyvault==1.1.0
 azure-loganalytics==0.1.0
 azure-mgmt-advisor==9.0.0
