--- a/src/azure-cli/azure/cli/command_modules/network/tests/latest/recordings/test_network_public_ip_prefix_with_ip_tags.yaml
+++ b/src/azure-cli/azure/cli/command_modules/network/tests/latest/recordings/test_network_public_ip_prefix_with_ip_tags.yaml
@@ -11,23 +11,23 @@ interactions:
       Connection:
       - keep-alive
       ParameterSetName:
-      - -g -n --length --zone
+      - -g -n --length --ip-tags
       User-Agent:
       - AZURECLI/2.47.0 azsdk-python-azure-mgmt-resource/22.0.0 Python/3.8.1 (Windows-10-10.0.22000-SP0)
     method: GET
-    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourcegroups/cli_test_network_public_ip_prefix_zone000001?api-version=2022-09-01
+    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourcegroups/cli_test_network_public_ip_prefix_with_ip_tags000001?api-version=2022-09-01
   response:
     body:
-      string: '{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_network_public_ip_prefix_zone000001","name":"cli_test_network_public_ip_prefix_zone000001","type":"Microsoft.Resources/resourceGroups","location":"eastus2","tags":{"product":"azurecli","cause":"automation","date":"2023-04-10T02:37:26Z"},"properties":{"provisioningState":"Succeeded"}}'
+      string: '{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_network_public_ip_prefix_with_ip_tags000001","name":"cli_test_network_public_ip_prefix_with_ip_tags000001","type":"Microsoft.Resources/resourceGroups","location":"eastus2","tags":{"product":"azurecli","cause":"automation","date":"2023-04-07T09:26:29Z"},"properties":{"provisioningState":"Succeeded"}}'
     headers:
       cache-control:
       - no-cache
       content-length:
-      - '367'
+      - '383'
       content-type:
       - application/json; charset=utf-8
       date:
-      - Mon, 10 Apr 2023 02:37:34 GMT
+      - Fri, 07 Apr 2023 09:26:36 GMT
       expires:
       - '-1'
       pragma:
@@ -42,8 +42,9 @@ interactions:
       code: 200
       message: OK
 - request:
-    body: '{"location": "eastus2", "properties": {"prefixLength": 30, "publicIPAddressVersion":
-      "IPv4"}, "sku": {"name": "Standard"}, "zones": ["1", "2", "3"]}'
+    body: '{"location": "eastus2", "properties": {"ipTags": [{"ipTagType": "RoutingPreference",
+      "tag": "Internet"}], "prefixLength": 30, "publicIPAddressVersion": "IPv4"},
+      "sku": {"name": "Standard"}}'
     headers:
       Accept:
       - application/json
@@ -54,38 +55,39 @@ interactions:
       Connection:
       - keep-alive
       Content-Length:
-      - '148'
+      - '189'
       Content-Type:
       - application/json
       ParameterSetName:
-      - -g -n --length --zone
+      - -g -n --length --ip-tags
       User-Agent:
       - AZURECLI/2.47.0 (AAZ) azsdk-python-core/1.24.0 Python/3.8.1 (Windows-10-10.0.22000-SP0)
     method: PUT
-    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_network_public_ip_prefix_zone000001/providers/Microsoft.Network/publicIPPrefixes/prefix1?api-version=2022-09-01
+    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_network_public_ip_prefix_with_ip_tags000001/providers/Microsoft.Network/publicIPPrefixes/prefix1?api-version=2022-09-01
   response:
     body:
-      string: "{\r\n  \"name\": \"prefix1\",\r\n  \"id\": \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_network_public_ip_prefix_zone000001/providers/Microsoft.Network/publicIPPrefixes/prefix1\",\r\n
-        \ \"etag\": \"W/\\\"f6b99bc3-38fa-43fc-8b60-7384339bc011\\\"\",\r\n  \"type\":
+      string: "{\r\n  \"name\": \"prefix1\",\r\n  \"id\": \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_network_public_ip_prefix_with_ip_tags000001/providers/Microsoft.Network/publicIPPrefixes/prefix1\",\r\n
+        \ \"etag\": \"W/\\\"2a9051fe-2c79-47a7-8615-d15aef362418\\\"\",\r\n  \"type\":
         \"Microsoft.Network/publicIPPrefixes\",\r\n  \"location\": \"eastus2\",\r\n
-        \ \"zones\": [\r\n    \"1\",\r\n    \"2\",\r\n    \"3\"\r\n  ],\r\n  \"properties\":
-        {\r\n    \"provisioningState\": \"Updating\",\r\n    \"resourceGuid\": \"8d972edc-8c1c-4a95-96a0-11e34468ff19\",\r\n
-        \   \"prefixLength\": 30,\r\n    \"publicIPAddressVersion\": \"IPv4\",\r\n
-        \   \"ipTags\": []\r\n  },\r\n  \"sku\": {\r\n    \"name\": \"Standard\",\r\n
+        \ \"properties\": {\r\n    \"provisioningState\": \"Updating\",\r\n    \"resourceGuid\":
+        \"b62cad55-d577-4d65-8939-70c3c5b32b75\",\r\n    \"prefixLength\": 30,\r\n
+        \   \"publicIPAddressVersion\": \"IPv4\",\r\n    \"ipTags\": [\r\n      {\r\n
+        \       \"ipTagType\": \"RoutingPreference\",\r\n        \"tag\": \"Internet\"\r\n
+        \     }\r\n    ]\r\n  },\r\n  \"sku\": {\r\n    \"name\": \"Standard\",\r\n
         \   \"tier\": \"Regional\"\r\n  }\r\n}"
     headers:
       azure-asyncnotification:
       - Enabled
       azure-asyncoperation:
-      - https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Network/locations/eastus2/operations/da1c1c89-11bf-44a5-bfda-5128f45e59cd?api-version=2022-09-01
+      - https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Network/locations/eastus2/operations/aec272dc-bb88-4de4-ade9-b91ddf1a1366?api-version=2022-09-01
       cache-control:
       - no-cache
       content-length:
-      - '656'
+      - '709'
       content-type:
       - application/json; charset=utf-8
       date:
-      - Mon, 10 Apr 2023 02:37:41 GMT
+      - Fri, 07 Apr 2023 09:26:42 GMT
       expires:
       - '-1'
       pragma:
@@ -98,12 +100,12 @@ interactions:
       x-content-type-options:
       - nosniff
       x-ms-arm-service-request-id:
-      - 9722412f-1bd1-4bbf-9819-cfe797e99472
+      - c54e3039-001b-4aad-a4fa-e801736e2bde
       x-ms-ratelimit-remaining-subscription-writes:
       - '1199'
     status:
       code: 201
-      message: ''
+      message: Created
 - request:
     body: null
     headers:
@@ -116,11 +118,11 @@ interactions:
       Connection:
       - keep-alive
       ParameterSetName:
-      - -g -n --length --zone
+      - -g -n --length --ip-tags
       User-Agent:
       - AZURECLI/2.47.0 (AAZ) azsdk-python-core/1.24.0 Python/3.8.1 (Windows-10-10.0.22000-SP0)
     method: GET
-    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Network/locations/eastus2/operations/da1c1c89-11bf-44a5-bfda-5128f45e59cd?api-version=2022-09-01
+    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Network/locations/eastus2/operations/aec272dc-bb88-4de4-ade9-b91ddf1a1366?api-version=2022-09-01
   response:
     body:
       string: "{\r\n  \"status\": \"Succeeded\"\r\n}"
@@ -132,7 +134,7 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       date:
-      - Mon, 10 Apr 2023 02:37:45 GMT
+      - Fri, 07 Apr 2023 09:26:46 GMT
       expires:
       - '-1'
       pragma:
@@ -149,7 +151,7 @@ interactions:
       x-content-type-options:
       - nosniff
       x-ms-arm-service-request-id:
-      - 781b5e6f-da55-4bb7-8cd8-06eeac524832
+      - 42cd9e71-f48f-4a0c-95e2-22af02a33bf6
     status:
       code: 200
       message: OK
@@ -165,33 +167,33 @@ interactions:
       Connection:
       - keep-alive
       ParameterSetName:
-      - -g -n --length --zone
+      - -g -n --length --ip-tags
       User-Agent:
       - AZURECLI/2.47.0 (AAZ) azsdk-python-core/1.24.0 Python/3.8.1 (Windows-10-10.0.22000-SP0)
     method: GET
-    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_network_public_ip_prefix_zone000001/providers/Microsoft.Network/publicIPPrefixes/prefix1?api-version=2022-09-01
+    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_network_public_ip_prefix_with_ip_tags000001/providers/Microsoft.Network/publicIPPrefixes/prefix1?api-version=2022-09-01
   response:
     body:
-      string: "{\r\n  \"name\": \"prefix1\",\r\n  \"id\": \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_network_public_ip_prefix_zone000001/providers/Microsoft.Network/publicIPPrefixes/prefix1\",\r\n
-        \ \"etag\": \"W/\\\"0066bcad-1039-40bf-8934-4c20f96f3ae7\\\"\",\r\n  \"type\":
+      string: "{\r\n  \"name\": \"prefix1\",\r\n  \"id\": \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_network_public_ip_prefix_with_ip_tags000001/providers/Microsoft.Network/publicIPPrefixes/prefix1\",\r\n
+        \ \"etag\": \"W/\\\"2ab302b6-69be-4288-b59f-a4f9b14dc11a\\\"\",\r\n  \"type\":
         \"Microsoft.Network/publicIPPrefixes\",\r\n  \"location\": \"eastus2\",\r\n
-        \ \"zones\": [\r\n    \"1\",\r\n    \"2\",\r\n    \"3\"\r\n  ],\r\n  \"properties\":
-        {\r\n    \"provisioningState\": \"Succeeded\",\r\n    \"resourceGuid\": \"8d972edc-8c1c-4a95-96a0-11e34468ff19\",\r\n
-        \   \"prefixLength\": 30,\r\n    \"publicIPAddressVersion\": \"IPv4\",\r\n
-        \   \"ipPrefix\": \"20.22.112.192/30\",\r\n    \"ipTags\": []\r\n  },\r\n
-        \ \"sku\": {\r\n    \"name\": \"Standard\",\r\n    \"tier\": \"Regional\"\r\n
-        \ }\r\n}"
+        \ \"properties\": {\r\n    \"provisioningState\": \"Succeeded\",\r\n    \"resourceGuid\":
+        \"b62cad55-d577-4d65-8939-70c3c5b32b75\",\r\n    \"prefixLength\": 30,\r\n
+        \   \"publicIPAddressVersion\": \"IPv4\",\r\n    \"ipPrefix\": \"20.157.66.48/30\",\r\n
+        \   \"ipTags\": [\r\n      {\r\n        \"ipTagType\": \"RoutingPreference\",\r\n
+        \       \"tag\": \"Internet\"\r\n      }\r\n    ]\r\n  },\r\n  \"sku\": {\r\n
+        \   \"name\": \"Standard\",\r\n    \"tier\": \"Regional\"\r\n  }\r\n}"
     headers:
       cache-control:
       - no-cache
       content-length:
-      - '694'
+      - '746'
       content-type:
       - application/json; charset=utf-8
       date:
-      - Mon, 10 Apr 2023 02:37:46 GMT
+      - Fri, 07 Apr 2023 09:26:46 GMT
       etag:
-      - W/"0066bcad-1039-40bf-8934-4c20f96f3ae7"
+      - W/"2ab302b6-69be-4288-b59f-a4f9b14dc11a"
       expires:
       - '-1'
       pragma:
@@ -208,7 +210,7 @@ interactions:
       x-content-type-options:
       - nosniff
       x-ms-arm-service-request-id:
-      - 855915b4-4011-4142-b854-3ae137581147
+      - ac702c0a-2b09-4869-91b1-fdd2541ff5d7
     status:
       code: 200
       message: OK
