--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1087,3 +1087,31 @@ jobs:
     displayName: "Install pip and wheel"
   - bash: ./scripts/ci/test_ref_doc.sh
     displayName: "Verify Sphinx Document Generator"
+
+- job: NotifyCIErrors
+  displayName: Notify CI Errors
+  pool:
+    name: ${{ variables.ubuntu_pool }}
+  steps:
+  - task: UsePythonVersion@0
+    displayName: 'Use Python 3.10'
+    inputs:
+      versionSpec: 3.10
+  - task: AzureCLI@2
+    inputs:
+      azureSubscription: 'Azure CLI'
+      scriptType: 'bash'
+      scriptLocation: 'inlineScript'
+      inlineScript: |
+        pip install requests
+        teams_api_url=$(az keyvault secret show --vault-name kv-azuresdk --name azure-cli-teams-bot-api-url --query value -otsv)
+        teams_api_key=$(az keyvault secret show --vault-name kv-azuresdk --name azure-cli-teams-bot-api-key --query value -otsv)
+        echo "Security Test."
+        ado_variable=$(SECRET_KEY)
+        echo "SECRET_KEY"
+    displayName: 'Notify To Teams Channel'
+    env:
+      BASE_URI: $(System.CollectionUri)
+      PROJECT_TYPE: $(System.TeamProject)
+      BUILD_ID: $(Build.BuildId)
+      JOB_ID: $(System.JobId)
