--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1087,3 +1087,65 @@ jobs:
     displayName: "Install pip and wheel"
   - bash: ./scripts/ci/test_ref_doc.sh
     displayName: "Verify Sphinx Document Generator"
+
+- job: NotifyCIErrors
+  dependsOn:
+    - CheckPullRequest
+    - RejectPullRequestToMasterBranch
+    - CredentialScanner
+    - PolicyCheck
+    - ExtractMetadata
+    - VerifyLinuxRequirements
+    - VerifyDarwinRequirements
+    - VerifyWindowsRequirements
+    - VerifyVersions
+    - BuildWindowsMSI
+    - TestWindowsMSI
+    - BuildDockerImage
+    - TestDockerImage
+    - BuildPythonWheel
+    - TestPythonWheel
+    - TestCore
+    - TestTelemetry
+    - IntegrationTestAgainstProfiles
+    - TestExtensionsLoading
+    - BuildHomebrewFormula
+    - TestHomebrewFormula
+    - TestHomebrewPackage
+    - BuildRpmPackageMariner
+    - BuildRpmPackages
+    - TestRpmPackage
+    - BuildDebPackages
+    - TestDebPackages
+    - CheckStyle
+    - CheckHeaders
+    - PerformanceCheck
+    - CheckLinter
+    - CodegenCoverage
+    - VerifySphinxDocumentGenerator
+  condition: and(failed(), in(variables['Build.Reason'], 'BatchedCI'))
+  displayName: Notify CI Errors
+  pool:
+    name: ${{ variables.ubuntu_pool }}
+  steps:
+  - task: UsePythonVersion@0
+    displayName: 'Use Python 3.10'
+    inputs:
+      versionSpec: 3.10
+  - task: AzureCLI@2
+    inputs:
+      azureSubscription: 'Azure CLI'
+      scriptType: 'bash'
+      scriptLocation: 'inlineScript'
+      inlineScript: |
+        pip install requests
+        teams_api_url=$(az keyvault secret show --vault-name $(TEAMS_BOT_VAULT_NAME) --name $(TEAMS_BOT_API_URL_SECRET_NAME) --query value -otsv)
+        teams_api_key=$(az keyvault secret show --vault-name $(TEAMS_BOT_VAULT_NAME) --name $(TEAMS_BOT_API_KEY_SECRET_NAME) --query value -otsv)
+        echo "If any task fails, notify to teams channel"
+        python scripts/ci/notify_ci_errors.py $teams_api_url $teams_api_key $(TEAMS_CHANNEL_ID)
+    displayName: 'Notify To Teams Channel'
+    env:
+      BASE_URI: $(System.CollectionUri)
+      PROJECT_TYPE: $(System.TeamProject)
+      BUILD_ID: $(Build.BuildId)
+      JOB_ID: $(System.JobId)
