--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -8,7 +8,7 @@
 
 /doc/ @jiasli @kairu-ms @jsntcy
 /tools/ @kairu-ms @jiasli @wangzelin007 @calvinhzy
-/scripts/ @kairu-ms @jiasli @wangzelin007 @calvinhzy
+/scripts/ @kairu-ms @jiasli @wangzelin007 @calvinhzy @bebound
 /scripts/live_test @kairu-ms @wangzelin007
 /src/azure-cli-testsdk/ @jsntcy @jiasli @kairu-ms @wangzelin007
 
