--- a/src/azure-cli/requirements.py3.Linux.txt
+++ b/src/azure-cli/requirements.py3.Linux.txt
@@ -44,7 +44,7 @@ azure-mgmt-datamigration==10.0.0
 azure-mgmt-devtestlabs==4.0.0
 azure-mgmt-dns==8.0.0
 azure-mgmt-eventgrid==10.2.0b2
-azure-mgmt-eventhub==10.1.0
+azure-mgmt-eventhub==11.0.0b1
 azure-mgmt-extendedlocation==1.0.0b2
 azure-mgmt-hdinsight==9.0.0
 azure-mgmt-imagebuilder==1.1.0
