--- a/src/azure-cli/azure/cli/command_modules/acs/linter_exclusions.yml
+++ b/src/azure-cli/azure/cli/command_modules/acs/linter_exclusions.yml
@@ -24,7 +24,22 @@ aks create:
           - option_length_too_long
       image_cleaner_interval_hours:
           rule_exclusions:
-          - option_length_too_long    
+          - option_length_too_long
+      azure_monitor_workspace_resource_id:
+        rule_exclusions:
+        - option_length_too_long
+      disable_azuremonitormetrics:
+        rule_exclusions:
+        - option_length_too_long
+      enable_azuremonitormetrics:
+        rule_exclusions:
+        - option_length_too_long
+      ksm_metric_annotations_allow_list:
+        rule_exclusions:
+        - option_length_too_long
+      ksm_metric_labels_allow_list:
+        rule_exclusions:
+        - option_length_too_long
 
 aks enable-addons:
   parameters:
@@ -59,7 +74,7 @@ aks update:
           - option_length_too_long
       assign_kubelet_identity:
           rule_exclusions:
-          - option_length_too_long    
+          - option_length_too_long
       enable_snapshot_controller:
           rule_exclusions:
           - option_length_too_long
@@ -68,5 +83,20 @@ aks update:
           - option_length_too_long
       image_cleaner_interval_hours:
           rule_exclusions:
-          - option_length_too_long    
+          - option_length_too_long
+      azure_monitor_workspace_resource_id:
+        rule_exclusions:
+        - option_length_too_long
+      disable_azuremonitormetrics:
+        rule_exclusions:
+        - option_length_too_long
+      enable_azuremonitormetrics:
+        rule_exclusions:
+        - option_length_too_long
+      ksm_metric_annotations_allow_list:
+        rule_exclusions:
+        - option_length_too_long
+      ksm_metric_labels_allow_list:
+        rule_exclusions:
+        - option_length_too_long
 ...
