--- a/src/azure-cli/azure/cli/command_modules/acs/linter_exclusions.yml
+++ b/src/azure-cli/azure/cli/command_modules/acs/linter_exclusions.yml
@@ -40,6 +40,9 @@ aks create:
       ksm_metric_labels_allow_list:
         rule_exclusions:
         - option_length_too_long
+      enable_windows_recording_rules:
+        rule_exclusions:
+        - option_length_too_long
 
 aks enable-addons:
   parameters:
@@ -99,4 +102,7 @@ aks update:
       ksm_metric_labels_allow_list:
         rule_exclusions:
         - option_length_too_long
+      enable_windows_recording_rules:
+          rule_exclusions:
+          - option_length_too_long
 ...
